--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,12 @@
         android:layout_height="392dp"
         android:orientation="horizontal">
 
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
         <com.google.android.gms.maps.MapView
             android:id="@+id/mapView"
             android:layout_width="wrap_content"
